--- a/src/App.css
+++ b/src/App.css
@@ -4,29 +4,6 @@
   position: relative;
   overflow: hidden;
   display: flex;
+  background-color: black;
 }
-
-.background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: url(img/background.jpg) no-repeat center;
-  background-size: cover;
-  filter: grayscale(100);
-  z-index: -1;
-}
-/* 
-.background2 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: url(img/Background-2.jpg) no-repeat center;
-  background-size: cover;
-  filter: grayscale(100);
-  z-index: -1;
-} */
 
