--- a/src/styles/LeftMenu.css
+++ b/src/styles/LeftMenu.css
@@ -1,14 +1,17 @@
 .leftMenu {
   width: 280px;
-  height: 100%;
-  min-height: 100vh;
-  background: rgba(34, 34, 34, 0.6);
+  height: 86vh;
+  min-height: 86vh;
+  background: #121212;
   backdrop-filter: blur(10px);
-  padding: 25px 20px;
+  padding: 20px 20px 0 20px;
   overflow: hidden;
   transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   display:flex;
   flex-wrap: wrap;
+  margin: 1vh 0 1vh 0.6vw;
+  border-radius: 8px;
+  overflow: scroll !important;
 }
 
 .logoContainer {
@@ -217,7 +220,7 @@
 }
 
 .playListContainer .playListScroll {
-  height: 140px;
+  height: 190px;
   overflow-x: hidden;
   overflow-y: scroll;
   position: relative;
