--- a/src/styles/MusicPlayer.css
+++ b/src/styles/MusicPlayer.css
@@ -61,7 +61,8 @@
   color:  #4bdde2 !important;
   filter: drop-shadow(0px 0px 4px  #4bdde2);
   position: absolute; 
-  top: 1.5vh; left: 6.2vw;
+  top: 1.5vh; left: 5.6vw;
+  margin-left: 10px;
 }
 
 .songAttributes .top .left .songName,
@@ -237,6 +238,10 @@
 
   .musicPlayer .songAttributes .bottom .progressBar {
     width: 110px;
+  }
+  .musicPlayer .songAttributes .artist,
+  .musicPlayer .songAttributes .songName {
+    display: none;
   }
 }
 
