--- a/src/styles/LeftMenu.css
+++ b/src/styles/LeftMenu.css
@@ -5,13 +5,12 @@
   background: #121212;
   backdrop-filter: blur(10px);
   padding: 20px 20px 0 20px;
-  overflow: hidden;
+  overflow: hidden !important;
   transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   display:flex;
   flex-wrap: wrap;
   margin: 1vh 0 1vh 0.6vw;
   border-radius: 8px;
-  overflow: scroll !important;
 }
 
 .logoContainer {
@@ -19,6 +18,7 @@
   justify-content: space-between;
   align-items: center;
   color: #f1f1f1;
+  margin-bottom: 10px;
 }
 
 .logoContainer .logo {
