--- a/src/styles/MainContainer.css
+++ b/src/styles/MainContainer.css
@@ -7,32 +7,8 @@
   backdrop-filter: blur(10px);
   transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   margin: 1vh 0.6vw;
-  overflow: scroll !important;
-}
-
-.Banner {
-  height: 300px;
+  overflow: scroll;
   position: relative;
-}
-
-.Banner .bannerImg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: grayscale(100);
-  border-radius: 8px;
-}
-
-.Banner .bottom {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 5rem;
-  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.9));
 }
 
 .content {
