--- a/src/styles/HeaderSong.css
+++ b/src/styles/HeaderSong.css
@@ -71,3 +71,55 @@ top: 10px; left: 5px;
 .song6{
     top:-74.2vh; left:52vw;
 }
+
+
+@media screen and (max-width: 820px) {
+    #header-context {
+        font-size: 24px; 
+        left: 3%; 
+        top: 75px; 
+    }
+
+    .header-suggested {
+        width: 35%; 
+    }
+
+
+    .header-suggested .song-img {
+        width: 25%; 
+    }
+
+    .header-suggested .song-name {
+        font-size: 14px; 
+    }
+
+   
+}
+
+
+@media screen and (max-width: 480px) {
+    #header-context {
+        font-size: 18px; 
+        text-align: center; 
+        top: 85px; 
+    }
+
+    .header-suggested {
+        flex-direction: column; 
+        width: 25%;
+    }
+
+    .header-suggested .song-img {
+        width: 50%; 
+        margin: 0 auto;
+    }
+
+    .header-suggested .song-name {
+        text-align: right; 
+        font-size: 8.3px; 
+        margin-left: 38.5px;
+        margin-top: -20px;
+    }
+
+    
+}
