--- a/src/styles/HeaderBar.css
+++ b/src/styles/HeaderBar.css
@@ -1,9 +1,8 @@
 #header-bar {
     position: fixed;
     display: inline-block;
-    background-image: linear-gradient(#012437,#052a3d);
     height: 10.10vh; width: 100%;
-    z-index: 2;
+    z-index: 5;
 }
 
 #header-bar .header-btn{
@@ -93,6 +92,7 @@
     font-weight: bold;
     font-size: 14.5px;
     color: #fff;
+    text-decoration: none;
 }
 
 /*premium button*/
@@ -112,6 +112,7 @@
     font-weight: bold;
     font-size: 14.5px;
     color: #000;
+    text-decoration: none;
 }
 
 /*button hover*/
@@ -120,7 +121,7 @@
     cursor:not-allowed;
 }
 
-.bell-btn:hover,.avatar-btn:hover,
+.bell-btn:hover,
 .about-btn:hover{
     top:-1%; right:0.2%;
     cursor: pointer;
