--- a/src/styles/LeftMenu.css
+++ b/src/styles/LeftMenu.css
@@ -242,12 +242,19 @@
   font-size: 18px;
 }
 
-.playListContainer .playListScroll .playLists p {
+.playListContainer .playListScroll .playLists .listType {
   font-size: 16px;
   margin-left: 15px;
   text-overflow: ellipsis;
   overflow: hidden;
   display: inline;
+  text-decoration: none;
+  color: #848484;
+}
+
+.playListContainer .playListScroll .playLists:hover .listType {
+  color: #f1f1f1;
+  transition: all 0.3s;
 }
 
 .playListContainer .playListScroll .playLists .trash {
